# small_iter

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
benches/: vec_of_iters.rs
src/: lib.rs
