[package]
name = "small_iter"
version = "0.1.2"
edition = "2021"
authors = ["Tim (Theemathas) Chirananthavat <theemathas@gmail.com>"]
description = "A 3-pointer iterator that moves out of a `Vec<T>` or `Box<[T]>`"
documentation = "https://docs.rs/small_iter"
readme = "README.md"
repository = "https://github.com/theemathas/small_iter/"
license = "MIT"
keywords = ["iterator", "boxed", "slice", "vec", "memory"]
categories = ["algorithms", "data-structures", "memory-management", "no-std"]

[dependencies]

[dev-dependencies]
criterion = "0.5.1"
thin-vec = "0.2.13"

[[bench]]
name = "vec_of_iters"
harness = false
